bookinfo/gateway-domain/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: istio-system
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: https-argocd
  hostnames:
    - argocd.hoangguruu.site
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
